--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
+    "nes.css": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "sass": "^1.62.1",
     "styled-components": "^5.3.10"
   },
   "devDependencies": {
